--- a/csharp-capstone/Capstone.Web/Views/Survey/Index.cshtml
+++ b/csharp-capstone/Capstone.Web/Views/Survey/Index.cshtml
@@ -8,7 +8,7 @@
 
 
 
-<div class="index">
+<div class="index"></div>
     <h1>Top Rated Parks!!</h1>
     <section class="centeredPanel">
         <table id="surveyIndexTable" class="table table-striped">
@@ -34,6 +34,4 @@
 
         </table>
     </section>
-</div>
-
 
